test: change matching state activates buy stop limit order but mot executed